# htmx_projects

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  fly.toml  rustfmt.toml
htmx_auth/: Cargo.toml  README.md
htmx_auth/src/: main.rs  markup.rs
htmx_crud/: Cargo.toml  README.md  scripts.js
htmx_crud/src/: main.rs
htmx_email/: Cargo.toml  README.md
htmx_email/src/: main.rs
htmx_events/: Cargo.toml
htmx_events/src/: main.rs
htmx_images/: Cargo.toml  README.md
htmx_images/assets/: grid.css  loading-bar.css  upload.js
htmx_images/migrations/: 20240317150701_initial.down.sql  20240317150701_initial.up.sql  20240410224454_dominant_color.down.sql  20240410224454_dominant_color.up.sql
htmx_images/src/: db.rs  handler.rs  img.rs  main.rs  markup.rs  mime.rs  state.rs
htmx_infinite_scroll/: Cargo.toml  README.md  style.css
htmx_infinite_scroll/src/: main.rs
htmx_router/: Cargo.toml  README.md  content.ron  content.toml
htmx_router/src/: constants.rs  handlers.rs  hx.rs  main.rs  markup.rs  state.rs
htmx_search/: Cargo.toml  README.md  content.ron
htmx_search/src/: main.rs  markup.rs
htmx_wordle/: Cargo.toml  README.md  scripts.js  style.css  words.txt
htmx_wordle/src/: constants.rs  game.rs  lib.rs  main.rs  reference.html  storage.rs  word.rs
