[workspace]
members = ["htmx_infinite_scroll", "htmx_wordle"]

workspace.resolver = "1"

[workspace.dependencies]
axum = { version = "0.7.4", features = ["multipart"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["limit", "trace"] }
maud = { version = "0.26.0", features = ["axum"] }
tinyrand = "0.5.0"
uuid = { version = "1.7.0", features = ["v4"] }
