[workspace]
members = [
    "htmx_crud",
    "htmx_infinite_scroll",
    "htmx_router",
    "htmx_wordle",
    "htmx_images",
    "htmx_auth",
    "htmx_email",
    "htmx_search",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7.4", features = ["multipart"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["limit", "trace", "cors"] }
maud = { version = "0.26.0", features = ["axum"] }
tinyrand = "0.5.0"
uuid = { version = "1.7.0", features = ["v4"] }
chrono = { version = "0.4.35", features = ["serde"] }
thiserror = { version = "1.0.57" }
anyhow = "1.0.81"
toml = "0.8.11"
axum-htmx = "0.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22.0"
ron = "0.8.1"
dotenvy = "0.15.7"
hyper = { version = "1.2.0", features = ["client"] }
http = "1.0.0"
