[package]
name = "htmx_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
maud = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
