[package]
name = "htmx_images"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
maud = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["validate-request"] }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
dotenvy = { workspace = true }
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "tls-rustls",
] }
image = { version = "0.24.7", features = ["gif"] }
webp = "0.2.6"
mediatype = "0.19.18"
