[package]
name = "htmx_wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
maud = { workspace = true }
serde = { workspace = true }
tinyrand = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
